--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "11ty-basics",
   "version": "1.0.0",
-  "description": "An example of essential and suggested 11ty features for creating a community-driven site.",
+  "description": "Essential 11ty features for creating a community-driven site for collecting tech stacks.",
   "main": "index.js",
   "scripts": {
     "develop": "eleventy --serve",
@@ -9,9 +9,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/5t3ph/11ty-basics.git"
+    "url": "git+https://github.com/juancarlosasensio/planet-stack.git"
   },
-  "author": "5t3ph",
+  "author": "Juan Carlos Asensio",
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^0.11.0"
